<resources>
    <string name="app_name">CineFAST</string>
    <string name='title_red'>Cine</string>
    <string name="title_white">FAST</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="get_started">Get Started</string>
    <string name="onboarding_title">Explore now \n to experience the benefits</string>
    <string name="onboarding_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="select_date">Select Date</string>
    <string name="now_showing">Now Showing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="book_seats">Book Seats</string>
    <string name="button_snack">Proceed to Snacks</string>
    <string name="theater_title">⚲ Theater</string>
    <string name="hall_title">🏠︎ Hall</string>
    <string name="date_title">🗓 Date</string>
    <string name="time_title">⏱︎ Time</string>
    <string name="trailer">▶ Trailer</string>
    <string name="movie1">The Dark Knight</string>
    <string name="movie1_genre">Action / 152 min</string>
    <string name="movie2">Inception</string>
    <string name="movie2_genre">Sci-Fi / 148 min</string>
    <string name="movie3">Interstellar</string>
    <string name="movie3_genre">Sci-Fi / 169 min</string>
    <string name="movie4">Shawshank Redemption</string>
    <string name="movie4_genre">Drama / 142 min</string>
    <string name="booking_details">Booking Details</string>
    <string name="send_ticket">Send Ticket</string>
    <string name="tickets_header">Tickets</string>
    <string name="snacks_header">Snacks</string>
    <string name="select_items">Select Items</string>
    <string name="snacks_and_drinks_header">Snacks &amp; Drinks</string>
    <string name="confirm">Confirm</string>
    <string name="snacks1">Popcorn</string>
    <string name="snacks1_description">Large/Buttered</string>
    <string name="snacks2">Nachos</string>
    <string name="snacks2_description">With Cheese Dip</string>
    <string name="snacks3">Soft Drink</string>
    <string name="snacks3_description">Large/Any Flavor</string>
    <string name="snacks4">Fries</string>
    <string name="snacks4_description">Large</string>
    <string name="movie_title_image">Movie Title Image</string>
    <string name="view_last_booking">View Last Booking</string>

    <!-- Login/Signup Strings -->
    <string name="login_title">Log In</string>
    <string name="signup_title">Sign Up</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="register">Register</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="firebase_database_url">https://cinefast-750e3-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="my_bookings">My Bookings</string>
    <string name="search_hint">Search</string>
</resources>