<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/movie_card"
    android:padding="20dp"
    android:layout_marginBottom="10dp">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:src="@drawable/movie1"
        android:id="@+id/ivMovie"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="160dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie1"
            android:id="@+id/tvMovieTitile"
            android:textColor="@color/text_primary"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMovieDescription"
            android:text="@string/movie1_genre"
            android:textColor="@color/text_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginVertical="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/book_seats"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                app:backgroundTint="@color/primary"
                app:cornerRadius="10dp"
                android:id="@+id/bookBtn"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:textSize="16sp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="0dp"
                android:textColor="@color/text_black"
                app:backgroundTint="@color/secondary"
                android:layout_marginStart="10dp"
                android:text="@string/trailer"
                android:id="@+id/trailerBtn"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>