<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".SnacksFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:layout_marginBottom="-30dp">
    <include
        layout="@layout/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_secondary"
        android:text="@string/select_items"
        android:textSize="12sp"
        android:layout_marginVertical="5dp"
        android:paddingHorizontal="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_primary"
        android:text="@string/snacks_and_drinks_header"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="5dp"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:id="@+id/lvSnacks"
        tools:listitem="@layout/snack_line_item"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingHorizontal="10dp"
        android:background="@color/background_btns"
        android:paddingBottom="40dp">
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@color/primary"
            android:textColor="@color/text_primary"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:id="@+id/btnConfirm"/>
    </LinearLayout>
</LinearLayout>