<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyBookingsFragment"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:padding="20dp">
        <ImageView
            android:id="@+id/btnMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"
            android:contentDescription="@string/app_name" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_bookings"
            android:textColor="@color/text_primary"
            android:textSize="26sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <View
            android:layout_width="40dp"
            android:layout_height="0dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/search_bg"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:hint="@string/search_hint"
        android:textColorHint="@color/text_secondary"
        android:textColor="@color/white"
        android:paddingHorizontal="20dp"
        android:inputType="text"
        android:maxLines="1"
        android:importantForAutofill="no"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBookings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        tools:listitem="@layout/booking_line_item"/>
</LinearLayout>