<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SnacksActivity"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:layout_marginBottom="-30dp">
    <include
        layout="@layout/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_secondary"
        android:text="@string/select_items"
        android:textSize="12sp"
        android:layout_marginVertical="5dp"
        android:paddingHorizontal="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_primary"
        android:text="@string/snacks_and_drinks_header"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="5dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/movie_card"
                android:padding="20dp"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/snacks1"
                    android:scaleType="centerCrop"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="140dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks1"
                        android:textColor="@color/text_primary"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks1_description"
                        android:textColor="@color/text_secondary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginVertical="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks1_price"
                        android:textColor="@color/text_primary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/remove"
                            android:id="@+id/ivRemoveBtn1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:textColor="@color/text_primary"
                            android:text="0"
                            android:textStyle="bold"
                            android:paddingHorizontal="10dp"
                            android:id="@+id/tvSnack1"/>
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/add"
                            android:id="@+id/ivAddBtn1"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/movie_card"
                android:padding="20dp"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/snacks2"
                    android:scaleType="centerCrop"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="140dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks2"
                        android:textColor="@color/text_primary"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks2_description"
                        android:textColor="@color/text_secondary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginVertical="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks2_price"
                        android:textColor="@color/text_primary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/remove"
                            android:id="@+id/ivRemoveBtn2"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:textColor="@color/text_primary"
                            android:text="0"
                            android:textStyle="bold"
                            android:paddingHorizontal="10dp"
                            android:id="@+id/tvSnack2"/>
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/add"
                            android:id="@+id/ivAddBtn2"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/movie_card"
                android:padding="20dp"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/snacks3"
                    android:scaleType="centerCrop"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="140dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks3"
                        android:textColor="@color/text_primary"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks3_description"
                        android:textColor="@color/text_secondary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginVertical="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks3_price"
                        android:textColor="@color/text_primary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/remove"
                            android:id="@+id/ivRemoveBtn3"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:textColor="@color/text_primary"
                            android:text="0"
                            android:textStyle="bold"
                            android:paddingHorizontal="10dp"
                            android:id="@+id/tvSnack3"/>
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/add"
                            android:id="@+id/ivAddBtn3"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingHorizontal="10dp"
        android:background="@color/background_btns"
        android:paddingBottom="40dp">
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@color/primary"
            android:textColor="@color/text_primary"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:id="@+id/btnConfirm"/>
    </LinearLayout>
</LinearLayout>